# buddy

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md  ai-state.md  build.rs  todo.md
.github/workflows/: release.yml
docs/: BUILD.md  DESIGN.md  DEVELOPER.md  REFERENCE.md  agent-loop.md  architecture.md  ci-release.md  deprecations.md  install.md  playbook-remediation.md  refactor-playbook.md  remote-execution.md  terminal-repl.md  testing-ui.md  tools.md
docs/design/: DESIGN.md  agent-loop.md  architecture.md  auth-storage.md  context-management.md  feature-catalog.md  models.md  module-map.md  observability.md  prompt.md  remote-execution.md  runtime-and-protocols.md  terminal-repl.md  tools-and-execution.md  tools.md
docs/developer/: BUILD.md  DEVELOPER.md  REFERENCE.md  install.md  model-regression-tests.md  playbook-remediation.md  prompt-evals.md  refactor-playbook.md  testing-ui.md  tracing-cli.md
docs/plans/: 2026-02-27-claude-feedback-remediation-plan.md  2026-02-27-model-rendering-regressions.md  2026-02-27-runtime-ux-session-refactor.md  2026-02-27-streaming-runtime-architecture.md  2026-03-01-feature-requests.md  README.md  (+8 more)
examples/: alternate_frontend.rs
scripts/: bump-version.sh  install.sh  prompt-eval.sh
src/: agent.rs  api.rs  auth.rs  build_info.rs  cli.rs  cli_event_renderer.rs  config.rs  error.rs  lib.rs  main.rs  preflight.rs  prompt.rs  prompt_catalog.rs  render.rs  runtime.rs  session.rs  testsupport.rs  textutil.rs  tokens.rs  types.rs
tests/: model_regression.rs  traceui_tmux_regression.rs  ui_tmux_regression.rs
(+176 files in other folders)
